# geoid

./: .coveragerc  .gitignore  CONTRIBUTING.rst  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
geoid/: __init__.py  _meta.py  acs.py  census.py  censusnames.py  civick.py  core.py  tiger.py  util.py
src/geoid/: __init__.py  _meta.py  aff.py  census.py  core.py  tiger.py  util.py
support/: GenerateNames.ipynb
tests/: basic.py  conftest.py  test_basic.py
