[project]
name = "geoid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric Busboom", email = "eric@busboom.org" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
geoid = "geoid:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
